--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@types/react-dom": "~16.9.0"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
     "classnames": "^2.2.6"
   }
 }
