--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
-    "classnames": "^2.2.6"
+    "classnames": "^2.2.6",
+    "typestyle": "^2.3.0"
   }
 }
