renamed to Advanced Pagination

--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "pagination",
-  "widgetName": "Pagination",
+  "name": "advancedpagination",
+  "widgetName": "AdvancedPagination",
   "version": "1.0.0",
-  "description": "My widget description",
-  "copyright": "Benjamin Griggs",
+  "description": "Encapsulates math for handling custom grid and API pagination.",
+  "copyright": "© Mendix Technology BV 2022. All rights reserved.",
   "author": "Benjamin Griggs",
   "engines": {
     "node": ">=12"
   },
+  "license": "MIT",
   "config": {
-    "projectPath": "../..//",
+    "projectPath": "../../",
     "mendixHost": "http://localhost:8080",
-    "developmentPort": "3000"
+    "developmentPort": 3000
   },
-  "packagePath": "",
+  "packagePath": "mendix",
   "scripts": {
-    "start": "pluggable-widgets-tools start:server --open",
+    "start": "pluggable-widgets-tools start:server",
     "dev": "pluggable-widgets-tools start:web",
     "build": "pluggable-widgets-tools build:web",
     "lint": "pluggable-widgets-tools lint",
@@ -23,13 +24,12 @@
     "prerelease": "npm run lint",
     "release": "pluggable-widgets-tools release:web"
   },
-  "license": "MIT",
   "devDependencies": {
-    "@mendix/pluggable-widgets-tools": "^9.11.1",
-    "@types/big.js": "^4.0.5",
-    "@types/classnames": "^2.2.4",
-    "@types/react": "~16.9.0",
-    "@types/react-dom": "~16.9.0"
+    "@mendix/pluggable-widgets-tools": "^9.0.0",
+    "@types/big.js": "^6.0.2",
+    "@types/react": "~17.0.1",
+    "@types/react-dom": "~17.0.1"
   },
-  "dependencies": {}
+  "dependencies": {
+  }
 }
