--- a/src/package.xml
+++ b/src/package.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <package xmlns="http://www.mendix.com/package/1.0/">
-    <clientModule name="Pagination" version="1.0.0" xmlns="http://www.mendix.com/clientModule/1.0/">
+    <clientModule name="AdvancedPagination" version="1.0.0" xmlns="http://www.mendix.com/clientModule/1.0/">
         <widgetFiles>
-            <widgetFile path="Pagination.xml"/>
+            <widgetFile path="AdvancedPagination.xml"/>
         </widgetFiles>
         <files>
-            <file path="/pagination"/>
+            <file path="mendix/advancedpagination"/>
         </files>
     </clientModule>
 </package>
