--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "advancedpagination",
   "widgetName": "AdvancedPagination",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Encapsulates math for handling custom grid and API pagination.",
   "copyright": "© Mendix Technology BV 2022. All rights reserved.",
   "author": "Benjamin Griggs",
   "engines": {
-    "node": ">=12"
+    "node": ">=14"
   },
   "license": "MIT",
   "config": {
     "projectPath": "../../",
-    "mendixHost": "http://localhost:8080",
+    "mendixHost": "http://localhost:8082",
     "developmentPort": 3000
   },
   "packagePath": "mendix",
@@ -25,7 +25,7 @@
     "release": "pluggable-widgets-tools release:web"
   },
   "devDependencies": {
-    "@mendix/pluggable-widgets-tools": "^9.0.0",
+    "@mendix/pluggable-widgets-tools": "~9.6.2",
     "@types/big.js": "^6.0.2",
     "@types/react": "~17.0.1",
     "@types/react-dom": "~17.0.1"
