--- a/src/package.xml
+++ b/src/package.xml
@@ -1,11 +1,12 @@
-<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://www.mendix.com/package/1.0/">
-    <clientModule name="AdvancedPagination" version="1.3.0" xmlns="http://www.mendix.com/clientModule/1.0/">
+    <clientModule name="AdvancedPagination" version="1.3.1"
+        xmlns="http://www.mendix.com/clientModule/1.0/">
         <widgetFiles>
-            <widgetFile path="AdvancedPagination.xml"/>
+            <widgetFile path="AdvancedPagination.xml" />
         </widgetFiles>
         <files>
-            <file path="mendix/advancedpagination"/>
+            <file path="mendix/advancedpagination" />
         </files>
     </clientModule>
 </package>
