--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
     "name": "advancedpagination",
     "widgetName": "AdvancedPagination",
-    "version": "1.3.1",
+    "version": "2.0.0",
     "description": "Encapsulates math for handling custom grid and API pagination.",
     "copyright": "© Mendix Technology BV 2022. All rights reserved.",
     "author": "Benjamin Griggs",
     "engines": {
-        "node": ">=14"
+        "node": ">=16"
     },
     "license": "MIT",
     "config": {
@@ -25,10 +25,11 @@
         "release": "pluggable-widgets-tools release:web"
     },
     "devDependencies": {
-        "@mendix/pluggable-widgets-tools": "~9.6.2",
-        "@types/big.js": "^6.0.2",
-        "@types/react": "~17.0.1",
-        "@types/react-dom": "~17.0.1"
+        "@mendix/pluggable-widgets-tools": "~9.18.0",
+        "@types/big.js": "^6.0.2"
     },
-    "dependencies": {}
+    "dependencies": {
+        "classnames": "^2.3.2",
+        "sass": "^1.66.1"
+    }
 }
