added dropdown pagination type

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
     "name": "advancedpagination",
     "widgetName": "AdvancedPagination",
-    "version": "2.1.1",
+    "version": "2.2.0",
     "description": "Encapsulates math for handling custom grid and API pagination.",
-    "copyright": "© Mendix Technology BV 2022. All rights reserved.",
+    "copyright": "Benjamin Griggs 2022",
     "author": "Benjamin Griggs",
     "engines": {
-        "node": ">=16"
+        "node": ">=18"
     },
     "license": "MIT",
     "config": {
@@ -25,11 +25,19 @@
         "release": "pluggable-widgets-tools release:web"
     },
     "devDependencies": {
-        "@mendix/pluggable-widgets-tools": "~9.18.0",
+        "@mendix/pluggable-widgets-tools": "~9.24.0",
         "@types/big.js": "^6.0.2"
     },
     "dependencies": {
         "classnames": "^2.3.2",
-        "sass": "^1.66.1"
+        "sass": "^1.79.1"
+    },
+    "resolutions": {
+        "react": "18.2.0",
+        "react-native": "0.70.7"
+    },
+    "overrides": {
+        "react": "18.2.0",
+        "react-native": "0.70.7"
     }
 }
