--- a/package.json
+++ b/package.json
@@ -1,43 +1,49 @@
 {
-    "name": "advancedpagination",
-    "widgetName": "AdvancedPagination",
-    "version": "2.2.1",
-    "description": "Encapsulates math for handling custom grid and API pagination.",
-    "copyright": "Benjamin Griggs 2022",
-    "author": "Benjamin Griggs",
-    "engines": {
-        "node": ">=18"
-    },
-    "license": "MIT",
-    "config": {
-        "projectPath": "../../",
-        "mendixHost": "http://localhost:8082",
-        "developmentPort": 3000
-    },
-    "packagePath": "mendix",
-    "scripts": {
-        "start": "pluggable-widgets-tools start:server",
-        "dev": "pluggable-widgets-tools start:web",
-        "build": "pluggable-widgets-tools build:web",
-        "lint": "pluggable-widgets-tools lint",
-        "lint:fix": "pluggable-widgets-tools lint:fix",
-        "prerelease": "npm run lint",
-        "release": "pluggable-widgets-tools release:web"
-    },
-    "devDependencies": {
-        "@mendix/pluggable-widgets-tools": "~9.24.0",
-        "@types/big.js": "^6.0.2"
-    },
-    "dependencies": {
-        "classnames": "^2.3.2",
-        "sass": "^1.79.1"
-    },
-    "resolutions": {
-        "react": "18.2.0",
-        "react-native": "0.70.7"
-    },
-    "overrides": {
-        "react": "18.2.0",
-        "react-native": "0.70.7"
-    }
+  "name": "advancedpagination",
+  "widgetName": "AdvancedPagination",
+  "version": "3.0.0",
+  "description": "Encapsulates math for handling custom grid and API pagination.",
+  "copyright": "Benjamin Griggs 2022",
+  "author": "Benjamin Griggs",
+  "engines": {
+    "node": ">=22"
+  },
+  "license": "MIT",
+  "config": {
+    "projectPath": "../../",
+    "mendixHost": "http://localhost:8082",
+    "developmentPort": 3000
+  },
+  "packagePath": "mendix",
+  "scripts": {
+    "start": "pluggable-widgets-tools start:server",
+    "dev": "pluggable-widgets-tools start:web",
+    "build": "pluggable-widgets-tools build:web",
+    "lint": "pluggable-widgets-tools lint",
+    "lint:fix": "pluggable-widgets-tools lint:fix",
+    "prerelease": "npm run lint",
+    "release": "pluggable-widgets-tools release:web"
+  },
+  "devDependencies": {
+    "@mendix/pluggable-widgets-tools": "~10.21.1",
+    "@types/big.js": "^6.0.2"
+  },
+  "dependencies": {
+    "classnames": "^2.5.1",
+    "sass": "^1.89.2"
+  },
+  "resolutions": {
+    "react": "18.2.0",
+    "react-native": "0.72.7",
+    "react-dom": "18.2.0",
+    "@types/react": "18.2.0",
+    "@types/react-dom": "18.2.0"
+  },
+  "overrides": {
+    "react": "18.2.0",
+    "react-native": "0.72.7",
+    "react-dom": "18.2.0",
+    "@types/react": "18.2.0",
+    "@types/react-dom": "18.2.0"
+  }
 }
